<resources>
    <string name="app_name">KaizenSpeaking</string>
    <string name="title_home">Home</string>
    <string name="title_analyze">Analyze</string>
    <string name="title_history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_name">Nama</string>
    <string name="input_email">Email</string>
    <string name="input_password">Kata Sandi</string>
    <string name="input_confirm_password">Ulang Kata Sandi</string>
    <string name="daftar">DAFTAR</string>
    <string name="masuk">MASUK</string>
    <string name="atau">Atau</string>
    <string name="login_google">Masuk Dengan Google</string>

</resources>